need to check values

--- a/src/lithium/doc/lithium13.tex
+++ b/src/lithium/doc/lithium13.tex
@@ -410,5 +410,18 @@ We strictly have
 \end{array}
 \end{equation}
 
+\begin{equation}
+\left\lbrace
+	\begin{array}{rcl}
+	\gamma & = & \kappa \alpha_\infty \\
+	\beta  & = & \Theta + \kappa (1-\alpha_\infty)\\
+	\end{array}	
+\right.
+\end{equation}
+so that 
+\begin{equation}
+	\dfrac{\gamma}{\beta} = \psi
+\end{equation}
+is an increasing function w.r.t $\alpha_\infty$ and varies from $0$ to $\kappa/\Theta$...
 
 \end{document}
