--- a/src/lithium/doc/lithium13.tex
+++ b/src/lithium/doc/lithium13.tex
@@ -424,4 +424,13 @@ so that
 \end{equation}
 is an increasing function w.r.t $\alpha_\infty$ and varies from $0$ to $\kappa/\Theta$...
 
+We can manage
+\begin{equation}
+	\deltaLi = 10^3 \left[ \left(1+10^{-3}\deltaLiOut\right)\dfrac{\beta_7}{\beta_6} - 1 \right] 
+\end{equation}
+or more interestingly
+\begin{equation}
+	\Delta^7 = \deltaLi - \deltaLiOut = 10^3 \left(1+10^{-3}\deltaLiOut\right) \left[\dfrac{\beta_7}{\beta_6} - 1\right]
+\end{equation}
+
 \end{document}
