WIP V13 with numerical arguments

--- a/src/lithium/doc/lithium13.tex
+++ b/src/lithium/doc/lithium13.tex
@@ -433,4 +433,20 @@ or more interestingly
 	\Delta^7 = \deltaLi - \deltaLiOut = 10^3 \left(1+10^{-3}\deltaLiOut\right) \left[\dfrac{\beta_7}{\beta_6} - 1\right]
 \end{equation}
 
+\subsection{Simplification}
+\begin{equation}
+	\dfrac{\LiOut{7}}{\LiOut{6}} = \rho_s \left(1+10^{-3}\deltaLiOut\right)
+\end{equation}
+so that
+\begin{equation}
+\left\lbrace
+	\begin{array}{rclcl}
+	\LiOut{6} & = & \dfrac{1}{1+\rho_s\left(1+10^{-3}\deltaLiOut\right)} \LiOut{} & = & \sin^2(\varphi) \LiOut{} \\
+	\\
+	\LiOut{7} & = & \dfrac{\rho_s\left(1+10^{-3}\deltaLiOut\right)}{1+\rho_s\left(1+10^{-3}\deltaLiOut\right)} \LiOut{} & = & \cos^2(\varphi)\LiOut{} \\
+	\end{array}
+\right.
+\end{equation}
+
+
 \end{document}
