--- a/src/lithium/doc/lithium13.tex
+++ b/src/lithium/doc/lithium13.tex
@@ -447,6 +447,13 @@ so that
 	\end{array}
 \right.
 \end{equation}
-
+\begin{equation}
+\left\lbrace
+	\begin{array}{rcl}
+	\sin^2(\varphi) & \simeq & 0.07 - 6.87\,10^5 \deltaLi + 6.36\,10^{-8} \deltaLi^2\\
+	\cos^2(\varphi) & \simeq & 0.93 + 6.87\,10^5 \deltaLi - 6.36\,10^{-8} \deltaLi^2\\
+	\end{array}
+\right.
+\end{equation}
 
 \end{document}
