--- a/src/lithium/doc/lithium13.tex
+++ b/src/lithium/doc/lithium13.tex
@@ -447,11 +447,14 @@ so that
 	\end{array}
 \right.
 \end{equation}
+$$
+	\rho_s \approx 12.0192
+$$
 \begin{equation}
 \left\lbrace
 	\begin{array}{rcl}
-	\sin^2(\varphi) & \simeq & 0.07 - 6.87\,10^5 \deltaLi + 6.36\,10^{-8} \deltaLi^2\\
-	\cos^2(\varphi) & \simeq & 0.93 + 6.87\,10^5 \deltaLi - 6.36\,10^{-8} \deltaLi^2\\
+	\sin^2(\varphi) & \simeq & 0.0768 - 7.0910\,10^{-5} \deltaLiOut + \left(2.5586\,10^{-4}\deltaLiOut\right)^2\\
+	\cos^2(\varphi) & \simeq & 0.9232 + 7.0910\,10^{-5} \deltaLiOut - \left(2.5586\,10^{-4}\deltaLiOut\right)^2\\
 	\end{array}
 \right.
 \end{equation}
