WIP response calculus

--- a/src/lithium/doc/lithium13.tex
+++ b/src/lithium/doc/lithium13.tex
@@ -459,4 +459,24 @@ $$
 \right.
 \end{equation}
 
+We got
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+ k_6 & = & \lambda k_7 \\
+ \delta^{\ast} & = & 1+J_6 \LiOut{6} + J_7 \LiOut{7} = 1+\tilde{J}\LiOut{}, \; \tilde{J} = s^2J_6 + c^2J_7\\
+ \\
+ \kappa & = & \dfrac{\bar{p}^2 \proton E_0}{\delta^\ast} = \dfrac{\bar{p}^2 \proton E_0}{1+\tilde{J}\LiOut{}}\\
+ \\
+ \omega_6& = &  \dfrac{\bar{p}^2}{\delta^\ast} \lambda k_7 \proton s^2 \LiOut{} 
+ = \bar{p}^2 k_7 \proton \dfrac{\lambda s^2 \LiOut{}}{1+\tilde{J}\LiOut{}}\\
+ \\
+ \omega_7&=  &\dfrac{\bar{p}^2}{\delta^\ast} k_7 c^2 \proton \LiOut{} 
+ = \bar{p}^2 k_7 \proton \dfrac{ c^2 \LiOut{}}{1+\tilde{J}\LiOut{}}\\
+ \\
+ \omega_0 & = & \bar{p}^2 k_7 \proton \left(\lambda s^2+c^2\right) \dfrac{\LiOut{}}{1+\tilde{J}\LiOut{}}\\
+\end{array}
+\right.
+\end{equation}
+
 \end{document}
