WIP finding dose

--- a/src/lithium/doc/lithium13.tex
+++ b/src/lithium/doc/lithium13.tex
@@ -514,6 +514,7 @@ so that
 \end{equation}
 The final dependency is seen writing
 \begin{equation}
+\left\lbrace
 	\begin{array}{rcl}
 	\beta & = &\Theta + \kappa\left(1-\alpha_\infty\right)\\
 	      & = &\Theta + \dfrac{\kappa_0}{1+\tilde{J}\LiOut{}} \dfrac{\eta}{\tilde{S}+\eta}\\
@@ -521,6 +522,19 @@ The final dependency is seen writing
 	\gamma & = & \kappa \alpha_\infty \\
 	       & = & \dfrac{\kappa_0}{1+\tilde{J}\LiOut{}} \dfrac{\tilde{S}}{\tilde{S}+\eta} \\
 	\end{array}
+\right.
+\end{equation}
+then
+\begin{equation}
+\left\lbrace
+	\begin{array}{rcl}
+	\beta\LiOut{} & = & \Theta \LiOut{} + \dfrac{\kappa_0}{\tilde{K}} \dfrac{\eta\tilde{S}}{\tilde{S}+\eta}\\
+	\\
+	\gamma\LiOut{} & = & \dfrac{\kappa_0}{\tilde{K}} \dfrac{\tilde{S}^2}{\tilde{S}+\eta}\\
+	\\
+	\dfrac{\kappa_0}{\tilde{K}} & = & \dfrac{E_0}{\lambda s^2 + c^2}\\
+	\end{array}
+\right.
 \end{equation}
 
 \end{document}
