--- a/src/lithium/doc/lithium13.tex
+++ b/src/lithium/doc/lithium13.tex
@@ -495,7 +495,7 @@ We got
  \\
  \sigma_x & = & \dfrac{\omega_h}{k_x^l} = \dfrac{\omega_6}{k_x^l} + \dfrac{\omega_7}{k_x^l} + \dfrac{k_h}{k_x^l} \\
  \\
- \sigma_7 & = & \bar{p}^2\proton \left[\lambda s^2+c^2\right]\dfrac{\LiOut{}}{1+\tilde{J}\LiOut{}} + \eta = \tilde{S}+\eta\\
+ \sigma_7 & = & \bar{p}^2\proton \left[\lambda s^2+c^2\right]\dfrac{\LiOut{}}{1+\tilde{J}\LiOut{}} + \eta = \tilde{S}+\eta = \sigma\\
 \\
 \sigma_6 & = & {\bar{p}^2\proton} \left[s^2+\dfrac{c^2}{\lambda}\right]\dfrac{\LiOut{}}{1+\tilde{J}\LiOut{}}+\dfrac{\eta}{\lambda} = \dfrac{1}{\lambda} \sigma_7 = \dfrac{\tilde{S}+\eta}{\lambda}\\
 \end{array}
