--- a/src/lithium/doc/lithium13.tex
+++ b/src/lithium/doc/lithium13.tex
@@ -443,14 +443,32 @@ $$
 	\begin{array}{rcl}
 	\tilde{D} & = & 1 + \left(s^2J_6+c^2J_7\right) \LiOut{} = 1+\bar{J} \LiOut{}\\
 	\\
-	\omega_0  & = & k_7 \bar{p}^2 \proton \left(\lambda s^2+c^2\right) \dfrac{ \LiOut{} }{1+\bar{J}\LiOut{}} 
+	\omega_0  & = & k_7 \bar{p}^2 \proton \left(\lambda s^2+c^2\right) \dfrac{ \LiOut{} }{1+\bar{J}\LiOut{}} \\
+	& = & k_7 \underbrace{\bar{p}^2 \proton \dfrac{\left(\lambda s^2+c^2\right)}{\bar{J}}}_{K_h}
+	\underbrace{ \dfrac{ \bar{J} \LiOut{} }{1+\bar{J}\LiOut{}}}_{\Lambda}\\
+	\\
+	\alpha_\infty & = & \dfrac{K_h\Lambda}{K_h\Lambda+\eta}\\
+	\\
+	1-\alpha_\infty & = & \dfrac{\eta}{K_h\Lambda+\eta}\\
+	\\
+	\sigma_7 & = & \dfrac{\omega_0}{k_7} = \tilde\sigma = K_h\Lambda+\eta\\
+	\\
+	\sigma_6 & = & \tilde\sigma/\lambda\\
+	\\
+	\tilde\beta & = & \Theta + \tilde\kappa\left(1-\alpha_\infty\right) = \Theta+\dfrac{\bar{p}^2 \proton E_0}{\tilde{D}}  \dfrac{\eta}{K_h\Lambda+\eta}\\
+	\tilde\gamma & = & \tilde\kappa \alpha_\infty = \dfrac{\bar{p}^2 \proton E_0}{\tilde{D}}\dfrac{K_h\Lambda}{K_h\Lambda+\eta}\\
 	\end{array}
 \right.
 \end{equation}
 
+\subsection{Total Lithium}
+
 \begin{equation}
-	\beta_x = 
+\Li{} = \left\lbrace\tilde\beta\left[ 1 - \left(c^2e^{-\tau}+s^2e^{-\lambda\tau}\right) \right] 
++ \tilde\gamma\left[ c^2\Xi\left(\tau,\tilde\sigma\right) + s^2\Xi\left(\lambda\tau,\tilde\sigma/\lambda\right)\right]\right\rbrace \LiOut{}
 \end{equation}
+
+\subsection{Delta Lithium}
 
 \end{document}
 
