--- a/src/lithium/doc/lithium13.tex
+++ b/src/lithium/doc/lithium13.tex
@@ -468,6 +468,16 @@ $$
 + \tilde\gamma\left[ c^2\Xi\left(\tau,\tilde\sigma\right) + s^2\Xi\left(\lambda\tau,\tilde\sigma/\lambda\right)\right]\right\rbrace \LiOut{}
 \end{equation}
 
+\begin{equation}
+\left\lbrace
+	\begin{array}{rcl}
+	\tilde\beta\LiOut{} & = & \Theta\LiOut{} + \left(\dfrac{E_0}{\lambda s^2 + c^2}\right) \dfrac{ K_h \Lambda \cdot \eta}{ K_h \Lambda + \eta }\\
+	\\
+	\tilde\gamma\LiOut{} & = & \left(\dfrac{E_0}{\lambda s^2 + c^2}\right) \dfrac{K_h^2 \Lambda^2}{K_h \Lambda + \eta}\\
+	\end{array}
+\right.
+\end{equation}
+
 \subsection{Delta Lithium}
 
 \end{document}
